VR: Update textures only if dirty

This prevents from performing unnecessary context switches.

Bug: 861799
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:linux_vr;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I5da0e41dda9edb0243c9bbc9c944bdc2cdfaaf39
Reviewed-on: https://chromium-review.googlesource.com/1133298
Reviewed-by: Christopher Grant <cjgrant@chromium.org>
Reviewed-by: Ian Vollick <vollick@chromium.org>
Commit-Queue: Aldo Culquicondor <acondor@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574680}
Former-commit-id: 7b520e5b526c4e1ed0a2344a79e42eb6fcf5c298